2009-09-26 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/NSApplication.m (-setApplicationIconImage:,
	-finishLaunching): Move the set name code to finishLaunching, as
	the image called NSApplicationIcon should stay the same all the time.

2009-09-26 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/NSTextContainer.m (init):  Add this method as suggested
	by Derek Fawcus <dfawcus@cisco.com>.

2009-09-21 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/NSWindow.m (+standardWindowButton:forStyleMask:): Add
	support for toolbar button.
	* Source/NSWindow.m (-toggleToolbarShown:): Reorder the code.
	* Source/NSToolbar.m (_setVisible:broadcast:): Add code to really
	make the toolbar visible.
	* Source/NSToolbar.m (_window): New helper method for this.

2009-09-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSHorizontalTypesetter.m (-_cacheMoveTo:): Use default
	paragraph style when none is set.

2009-09-19 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSTextConverter.h,
	* TextConverters/RTF/RTFConsumer.m,
	* TextConverters/RTF/RTFProducer.h,
	* TextConverters/RTF/RTFProducer.m,
	* Source/NSAttributedString.m: Unify the text converter handling.
	* Headers/AppKit/NSAttributedString.h,
	* Source/NSAttributedString.m (-itemNumberInTextList:atIndex:,
	-rangeOfTextBlock:atIndex:, -rangeOfTextList:atIndex:): Correct
	interface and add implementation for these methods.

2009-09-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSToolbarView.m (-drawRect:): Also correct the only use
	of this method.

2009-09-16 Hans Baier <hansfbaier@googlemail.com>

	* Headers/Additions/GNUstepGUI/GSTheme.h,
	* Source/GSThemeDrawing.m: fix typo in method name:
	drawToobarRect -> drawToolbarRect

2009-09-14 Hans Baier <hansfbaier@googlemail.com>

	* Headers/AppKit/NSWorkspace.h,
	* Source/NSWorkspace.m: ([-launchAppWithBundleIdentifier:])
	add method and dummy implementation
	
2009-09-14 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSScroller.m,